# socket

./: CMakeLists.txt  CMakeSettings.json  README.md
main/myexe/: CMakeLists.txt
main/myexe/src/: client.cpp  server.cpp
main/mylib/: CMakeLists.txt
